# protocol-guild-poc

./: .gitignore  Cargo.toml  README.md  justfile  optimize.sh
contracts/ibc-forwarder/: Cargo.toml  README.md
contracts/ibc-forwarder/src/: contract.rs  msg.rs  state.rs
contracts/protocol-guild-splitter/: Cargo.toml  README.md
contracts/protocol-guild-splitter/src/: contract.rs  lib.rs  msg.rs  state.rs
interchaintest/: go.mod  protocol_guild_test.go  types.go
