[package]
name         = "protocol-guild-splitter"
authors      = ["benskey bekauz@protonmail.com"]
description  = "Splitter contract for protocol guild"
edition      = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema  = { workspace = true }
cosmwasm-std     = { workspace = true }
cw-storage-plus  = { workspace = true }
cw2              = { workspace = true }
thiserror        = { workspace = true }
schemars         = { workspace = true }
serde-json-wasm  = { workspace = true }
serde            = { workspace = true }
neutron-sdk      = { workspace = true }
cosmos-sdk-proto = { workspace = true }
protobuf         = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
anyhow = { workspace = true }
